--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #ffd7ba;
     font-family: "Roboto Mono", monospace;
+    color: #36395A;
     margin: 0;
     padding: 0;
     display: flex;
@@ -22,7 +23,7 @@ h1 {
     flex-wrap: wrap;
 }
 
-#no-button {
+/* #no-button {
     margin: 0 10px;
     color: white;
     background-color: red;
@@ -36,9 +37,9 @@ h1 {
         margin: 0;
         object-fit: contain;
     }
-}
+} */
 
-#yes-button {
+/* #yes-button {
     margin: 0 10px;
     color: white;
     border: none;
@@ -50,7 +51,7 @@ h1 {
         margin: 0;
         object-fit: contain;
     }
-}
+} */
 
 /* Make responsive for mobile */
 @media (max-width: 768px) {
@@ -82,6 +83,54 @@ h1 {
         width: auto;
         height: 250px;
     }
+}
+
+/* <!-- HTML !--> */
+/* <button class="button-30" role="button">Button 30</button> */
+/* CSS */
+.button-30 {
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.button-30:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.button-30:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-30:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
 }
 
 /* Path: /js/script.js */
